# Loop-Underwriter

./: .replit  ai_verification_agent.py  app.py  combined_server.py  database.py  excel_parser.py  init_database.py  koncile_integration.py  logic_engine.py  models.py  openai_integration.py  pdf_processor.py  pyproject.toml  replit.md  seed_vendors.py  transfer_hunter.py  verification.py  webhook_server.py
.streamlit/: config.toml
attached_assets/: 20240830-statements-3783--4_raw_text_1764543726098.txt  Business_Bank_Statement_8_docs_2025_12_08__20_46_Business_Bank_1765223254370.csv  Business_Bank_Statement_8_docs_2025_12_08__20_46_Business_Bank_1765223254371.csv  Business_Bank_Statement_lines[1]_1764547690506.csv  CJ Labs. CJL (1)_1764014927375.xlsx  Pasted--AI-s-Correction-Report-Errors-Identified-Reported-zero-values-for-all-payment-and-income-met-1764106769751_1764106769752.txt  Pasted--AccountHolderAddress-source-3011-JOSHUA-TREE-LN-MANVEL-TX-77578-3683-hou-1764543472008_1764543472008.txt  Pasted-Build-a-complete-Human-in-the-Loop-Underwriting-Platform-using-Python-Streamlit-for-the-fron-1764001452786_1764001452786.txt  Pasted-I-need-you-to-build-the-following-features-1-The-Logic-Engine-Processing-Create-a-processing-fu-1764546512536_1764546512536.txt  Pasted-sqlalchemy-exc-DataError-psycopg2-errors-StringDataRightTruncation-value-too-long-for-type-charac-1764104155598_1764104155599.txt  Pasted-sqlalchemy-exc-IntegrityError-psycopg2-errors-UniqueViolation-duplicate-key-value-violates-unique-1764103761320_1764103761320.txt
pages/: 1_📥_Inbox.py  2_📄_Deal_Details.py  (+4 more)
